--- a/index.html
+++ b/index.html
@@ -885,7 +885,8 @@
   function init() {
 
     var papers = [
-      { id: 1, title: "Gold - Back in Favour as a Reserve Asset", authors: "Ai Chia Foo", year: "2025", category: "Macro", abstract: "A striking ECB study published in June 2025 highlighted gold as the second largest reserve manager asset behind the dollar as of the end of 2024, at 20% global reserves, ahead of the euro. Gold prices are up close to 50% in the past year. Central bank demand was 20% of total demand in 2024, up from 10% in the 2010s. Several interesting nuggets from the data.", filename: "Gold - Back in Favour as a Reserve Asset.pdf", fileUrl: "https://drive.google.com/file/d/1VMQPFZbBynrTKIqvRi75tvpkwbbk5Q7f/view?usp=sharing" }
+      { id: 1, title: "Gold - Back in Favour as a Reserve Asset", authors: "Ai Chia Foo", year: "2025", category: "Macro", abstract: "A striking ECB study published in June 2025 highlighted gold as the second largest reserve manager asset behind the dollar as of the end of 2024, at 20% global reserves, ahead of the euro. Gold prices are up close to 50% in the past year. Central bank demand was 20% of total demand in 2024, up from 10% in the 2010s. Several interesting nuggets from the data.", filename: "Gold - Back in Favour as a Reserve Asset.pdf", fileUrl: "https://drive.google.com/file/d/1VMQPFZbBynrTKIqvRi75tvpkwbbk5Q7f/view?usp=sharing" },
+      { id: 2, title: "Miran Paper Revisited - Triffin Dilemma Tipping Point?", authors: "Ai Chia Foo", year: "2025", category: "Macro", abstract: "Thoughts on Miran's Paper on Restructuring the Global Trading System. Investment Implication? Prepare for a much weaker USD regime. It seems likely that we have reached the Triffin Tipping Point, where the market realises that the global reserve currency has non-negligible credit risk, rollover risk, policy risk, and that the administration wants a much weaker USD to improve their manufacturing sector competitiveness. The outlook for all USD assets, which are overowned by foreigners, is weak.", filename: "Miran Paper Revisited.pdf", fileUrl: "https://drive.google.com/file/d/1Ybrcap_WA0ct8zuBXNC0OlEBeZ8W71Rh/view?usp=sharing" }
     ];
     var nextId = 2;
     var pendingFile = null;
@@ -1049,3 +1050,18 @@
 </script>
 </body>
 </html>
+Done
+Here is the full code — follow these steps:
+
+Go to your GitHub repository
+Click on index.html
+Click the pencil icon to edit
+Press Cmd+A (Mac) or Ctrl+A (Windows) to select all
+Delete it
+Copy everything from the code block above — starting from <!DOCTYPE html> all the way to the end
+Paste it in
+Click Commit changes
+Netlify will then automatically update your live site within 30 seconds. Both papers will appear in the Research tab!
+
+
+
